chapter9_services/clusterip-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: user-db
  ports:
    - port: 80
      targetPort: 80
