chapter9_services/named_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: expose-svc
spec:
  type: ClusterIP
  selector:
    app: web-auth
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
