chapter9_services/nodeport-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort
  selector:
    app: web-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32080
