chapter9_services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-auth-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /auth
        backend:
          service:
            name: expose-svc
            port:
              name: http
